--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,30 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+import java.util.Scanner;
+ 
+public class Exercise6 {
+ 
+ public static void main(String[] args) {
+  Scanner in = new Scanner(System.in);
+   
+  System.out.print("Input first number: ");
+  int num1 = in.nextInt();
+   
+  System.out.print("Input second number: ");
+  int num2 = in.nextInt();
+ 
+  System.out.println(num1 + " + " + num2 + " = " + 
+  (num1 + num2));
+   
+  System.out.println(num1 + " - " + num2 + " = " + 
+  (num1 - num2));
+   
+  System.out.println(num1 + " x " + num2 + " = " + 
+  (num1 * num2));
+   
+  System.out.println(num1 + " / " + num2 + " = " + 
+  (num1 / num2));
+ 
+  System.out.println(num1 + " mod " + num2 + " = " + 
+  (num1 % num2));
+ }
+ 
+}
