--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,22 @@
+/*
+ *  UCF COP3330 Fall 2021 Assignment 5 Solution
+ *  Copyright 2021 Hamza Iqbal
+ */
+
 import java.util.Scanner;
- 
-public class Exercise6 {
- 
+public class Main {
  public static void main(String[] args) {
-  Scanner in = new Scanner(System.in);
-   
-  System.out.print("Input first number: ");
-  int num1 = in.nextInt();
-   
-  System.out.print("Input second number: ");
-  int num2 = in.nextInt();
- 
-  System.out.println(num1 + " + " + num2 + " = " + 
-  (num1 + num2));
-   
-  System.out.println(num1 + " - " + num2 + " = " + 
-  (num1 - num2));
-   
-  System.out.println(num1 + " x " + num2 + " = " + 
-  (num1 * num2));
-   
-  System.out.println(num1 + " / " + num2 + " = " + 
-  (num1 / num2));
- 
-  System.out.println(num1 + " mod " + num2 + " = " + 
-  (num1 % num2));
+  Scanner scanner = new Scanner(System.in);
+  System.out.println("Input the first number: ");
+  int n1 = scanner.nextInt();
+  System.out.println("Input the second number: ");
+  int n2 = scanner.nextInt();
+  int sum = n1 + n2;
+  int minus = n1 - n2;
+  int multiply = n1 * n2;
+  int subtract = n1 + n2;
+  int divide = n1 / n2;
+  int rnums = n1 % n2;
+  System.out.printf("Sum = %d\nMinus = %d\nMultiply = %d\nSubtract = %d\nDivide = %d\nRemainderOf2Numbers = %d\n ", sum, minus, multiply, subtract, divide, rnums);
  }
- 
 }
