--- a/.gitignore
+++ b/.gitignore
@@ -4,19 +4,32 @@
  */
 
 import java.util.Scanner;
+
 public class Main {
- public static void main(String[] args) {
-  Scanner scanner = new Scanner(System.in);
-  System.out.println("Input the first number: ");
-  int n1 = scanner.nextInt();
-  System.out.println("Input the second number: ");
-  int n2 = scanner.nextInt();
-  int sum = n1 + n2;
-  int minus = n1 - n2;
-  int multiply = n1 * n2;
-  int subtract = n1 + n2;
-  int divide = n1 / n2;
-  int rnums = n1 % n2;
-  System.out.printf("Sum = %d\nMinus = %d\nMultiply = %d\nSubtract = %d\nDivide = %d\nRemainderOf2Numbers = %d\n ", sum, minus, multiply, subtract, divide, rnums);
- }
+
+    public static void main(String[] args) {
+   Scanner sc=new Scanner(System.in);
+
+   System.out.println("What is the first number?");
+   String firstNumber=sc.next();
+   System.out.println("What is the second number?");
+   String secondNumber=sc.next();
+
+   int convertedFirtstNumber=Integer.parseInt(firstNumber);
+   int convertedSecondNumber=Integer.parseInt(secondNumber);
+
+   int sum=convertedFirtstNumber+convertedSecondNumber;
+
+   int difference=convertedFirtstNumber-convertedSecondNumber;
+
+   int multiplication=convertedFirtstNumber*convertedSecondNumber;
+
+   int quotient=convertedFirtstNumber/convertedSecondNumber;
+
+
+        System.out.println(convertedFirtstNumber+" + "+convertedSecondNumber+" = "+sum);
+        System.out.println(convertedFirtstNumber+" - "+convertedSecondNumber+" = "+difference);
+        System.out.println(convertedFirtstNumber+" * "+convertedSecondNumber+" = "+multiplication);
+        System.out.println(convertedFirtstNumber+" / "+convertedSecondNumber+" = "+quotient);
+    }
 }
